First test for moodle API

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-	"name": "n8n-nodes-<...>",
+	"name": "n8n-nodes-moodle",
 	"version": "0.1.0",
-	"description": "",
+	"description": "n8n nodes for Moodle REST API",
 	"license": "MIT",
 	"homepage": "",
 	"keywords": [
 		"n8n-community-node-package"
 	],
 	"author": {
-		"name": "",
-		"email": ""
+		"name": "Robbie De Lise",
+		"email": "robbie.de.lise@cvovolt.be"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/<...>/n8n-nodes-<...>.git"
+		"url": "https://github.com/cvovolt/n8n-nodes-moodle.git"
 	},
 	"scripts": {
 		"build": "n8n-node build",
@@ -31,12 +31,10 @@
 		"n8nNodesApiVersion": 1,
 		"strict": true,
 		"credentials": [
-			"dist/credentials/GithubIssuesApi.credentials.js",
-			"dist/credentials/GithubIssuesOAuth2Api.credentials.js"
+			"dist/credentials/MoodleApi.credentials.js"
 		],
 		"nodes": [
-			"dist/nodes/GithubIssues/GithubIssues.node.js",
-			"dist/nodes/Example/Example.node.js"
+			"dist/nodes/CoreCourseGetCategories/CoreCourseGetCategories.node.js"
 		]
 	},
 	"devDependencies": {
